Update New Text Document.html

--- a/New Text Document.html
+++ b/New Text Document.html
@@ -1,15 +1,12 @@
-<html>
-
+<html lang="en">
 <head>
-
-
-
-<head/>
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=
+    , initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Alireza Govah</title>
+</head>
 <body>
-<p>hello<p/>
-<body/>
-
-
-
-<html/>
+    <h1>hello world</h1>
+</body>
+</html>
